update scale note

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@ path {
     <p>Based on <a href="https://twitter.com/StatsMalaysia/status/1616631795792977920">images from Department of Statistics Malaysia</a>,
     more "tip-to-tip" view. East Malaysia actually has more land area than Peninsular Malaysia. Both projections are downscaling it,
     but this one is 0.76 to the original's 0.615. There was a little discrepancy here which makes me think that DOSM's East Malaysia
-    is using a different projection.</p>
+    is using a non-Mercator projection.</p>
     <div id="landscape"></div>
 
     <h3>Portrait</h3>
     <p>Based on <a href="https://twitter.com/StatsMalaysia/status/1718841181436801534/photo/3">images from Department of Statistics Malaysia</a>,
-    with an angular divider. East Malaysia is to scale with Peninsular Malaysia.</p>
+    with an angular divider. East Malaysia is 0.8x scale of Peninsular Malaysia.</p>
     <div id="portrait"></div>
 
 
