clearer credit, smaller original

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@ path {
   stroke: #000;
   stroke-width: 0.5;
 }
+#original {
+  zoom: 0.5;
+}
 .aquaborder {
   stroke: #00f;
 }
@@ -24,7 +27,8 @@ path {
   </head>
   <body>
     <h3>Original</h3>
-    <p>Distributed in <a href="https://github.com/rveciana/d3-composite-projections">github.com/rveciana/d3-composite-projections</a>
+    <p>Comes with <a href="https://github.com/rveciana/d3-composite-projections">github.com/rveciana/d3-composite-projections</a>, written by
+      Saiful Azfar Ramlee and Roger Veciana i Rovira.
     <div id="original"></div>
 
     <h3>Landscape</h3>
